[gd_scene load_steps=3 format=3 uid="uid://bhg6lanvbq8qd"]

[ext_resource type="FontFile" uid="uid://gptd25r7q4jy" path="res://battle_arena/textbox/nb_pixel_font_bundle/Habbo.ttf" id="1_djpvq"]
[ext_resource type="Script" uid="uid://c74m30yb88ftw" path="res://battle_arena/move_buttons/move_buttons.gd" id="1_fmeqp"]

[node name="MoveButtons" type="Control"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_fmeqp")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 2

[node name="Move1" type="Button" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_djpvq")
theme_override_font_sizes/font_size = 32
text = "Attack1"

[node name="Move2" type="Button" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_djpvq")
theme_override_font_sizes/font_size = 32
text = "Attack2"

[node name="Move3" type="Button" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_djpvq")
theme_override_font_sizes/font_size = 32
text = "Attack3"

[node name="Move4" type="Button" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_djpvq")
theme_override_font_sizes/font_size = 32
text = "Attack4"
